fix: Clear white space to the right of body

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,5 @@
-html,body
+html,
+body
 {
     margin: 0px;
     padding: 0px;
@@ -9,9 +10,6 @@ body {
   background-color: black;
   color: white;
 }
-
-
-
 
 h1 {
     font-size: 5rem;
